<resources>
    <string name="app_name">myForm</string>
    <string name="hello_icon">hello icon</string>
    <string name="fill_up_the_form_to_add_in_your_details">Fill up the form to add in your details</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="view_or_add_details">View or Add Details</string>
    <string name="proceed_next_to_fill_up_your_details_or_view_details">Proceed next to fill up your details or view added  details</string>
    <string name="proceed_next_to_fill_up_your_details_or_n_view_added_details">Proceed next to fill up your details or \n view added details</string>
    <string name="view_details">View Details</string>
    <string name="add_details">Add Details</string>
    <string name="add_ndetails">Add \nDetails</string>
    <string name="e_mail">E-mail</string>
    <string name="branch">Branch</string>
    <string name="registration_number">Registration Number</string>
    <string name="user_ndetails">User \nDetails</string>
    <string name="none">none</string>
    <string name="user_name">User Name</string>
    <string name="sample_email_com">sample@email.com</string>
    <string name="_98xxxxxxxx">98XXXXXXXX</string>
    <string name="school_icon">school icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="email_icon">email icon</string>
    <string name="school_name">School Name</string>
    <string name="reg_number_icon">reg number icon</string>
    <string name="_21bcexxxx">21BCEXXXX</string>
    <string name="thankyou">Thank You For Registering Your Details \nPress The Button Below To Register Another User\'s Data</string>
    <string name="regesiter_another_data">Regesiter Another Data</string>
</resources>